<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.1</version>
        <relativePath/>
    </parent>

    <groupId>com.payment.export.platform</groupId>
    <artifactId>payment-export-service</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>Payment Export Platform - Parent</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>25</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <internal-module.version>${project.version}</internal-module.version>
        <lombok.version>1.18.46</lombok.version>
        <commons-collections4.version>4.6.0</commons-collections4.version>
        <iban4j.version>3.2.14-RELEASE</iban4j.version>
        <shedlock-spring.version>7.9.0</shedlock-spring.version>
    </properties>

    <modules>
        <module>payment-export-service-stubs</module>
        <module>payment-export-service-domain</module>
        <module>payment-export-service-application</module>
        <module>payment-export-service-persistence</module>
        <module>payment-export-service-integration</module>
        <module>payment-export-service-messaging</module>
        <module>payment-export-service-container</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.payment.export.platform</groupId>
                <artifactId>payment-export-service-application</artifactId>
                <version>${internal-module.version}</version>
            </dependency>
            <dependency>
                <groupId>com.payment.export.platform</groupId>
                <artifactId>payment-export-service-domain</artifactId>
                <version>${internal-module.version}</version>
            </dependency>
            <dependency>
                <groupId>com.payment.export.platform</groupId>
                <artifactId>payment-export-service-persistence</artifactId>
                <version>${internal-module.version}</version>
            </dependency>
            <dependency>
                <groupId>com.payment.export.platform</groupId>
                <artifactId>payment-export-service-messaging</artifactId>
                <version>${internal-module.version}</version>
            </dependency>
            <dependency>
                <groupId>com.payment.export.platform</groupId>
                <artifactId>payment-export-service-integration</artifactId>
                <version>${internal-module.version}</version>
            </dependency>
            <dependency>
                <groupId>com.payment.export.platform</groupId>
                <artifactId>get-batch-soap-stub</artifactId>
                <version>${internal-module.version}</version>
            </dependency>
            <dependency>
                <groupId>com.payment.export.platform</groupId>
                <artifactId>get-transactions-soap-stub</artifactId>
                <version>${internal-module.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commons-collections4.version}</version>
            </dependency>
            <dependency>
                <groupId>org.iban4j</groupId>
                <artifactId>iban4j</artifactId>
                <version>${iban4j.version}</version>
            </dependency>
            <dependency>
                <groupId>net.javacrumbs.shedlock</groupId>
                <artifactId>shedlock-spring</artifactId>
                <version>${shedlock-spring.version}</version>
            </dependency>
            <dependency>
                <groupId>net.javacrumbs.shedlock</groupId>
                <artifactId>shedlock-provider-jdbc-template</artifactId>
                <version>${shedlock-spring.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <release>${java.version}</release>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
